--- a/src/public/css/components/theme-swticher.css
+++ b/src/public/css/components/theme-swticher.css
@@ -21,6 +21,9 @@ decide if you want to register the clicks and do another 360deg rotation or turn
 .theme-switcher:is(:hover, :focus) {
   outline: 0.1rem solid canvasText;
 }
+.theme-switcher:focus-visible {
+  outline-style: dashed;
+}
 
 .svg-size {
   min-inline-size: clamp(2.25rem, calc(2.18rem + 0.36vw), 2.5rem);
